--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -55,13 +55,10 @@ nav a.active {
 </nav>
 
 <h1>News</h1>
-<!-- <h3>My own private feed. &#x1F485;</h3> -->
-
 <ol>
 <% @feed.each do |e| %>
-    <li><a href="<%= e.url %>" target=\"_blank\"><%= e.title %></a>
-      <!-- <small><%= e.author %> | <%= e.published %></small></li> -->
-      <small><%= e.author || e.url %> | <%= distance_of_time_in_words(Time.now, e.published) %></small></li>
+  <li><a href="<%= e.url %>" target=<%= "_blank_#{e.id}"%>"><%= e.title %></a>
+    <small><%= e.author || e.url %> | <%= distance_of_time_in_words(Time.now, e.published) %></small></li>
 <% end %>
 </ol>
   </body>
